# offline-gemma-chat

./: .gitignore  README.md  pyproject.toml
src/offline_llm_app/: __init__.py  app.py  cli.py  config.py  context.py  ollama.py
tests/: test_app.py  test_cli.py  test_context.py  test_ollama.py
