[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-gemma-chat"
version = "0.1.0"
description = "Privacy-first offline LLM application using Ollama and Gemma 2."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
offline-llm = "offline_llm_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
